# streamlit-30days-challenge

./: instructions.txt  mainapp.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
files/: Aggregated_Metrics_By_Video.csv
scripts/: how_to_customize_layout.py  ken_dashbpard.py  kenjee_datascience_portfolio.py  page_theme.py  pandas_profiling.py  st_altair_chart.py  st_button.py  st_cache.py  st_checkbox.py  st_fileuploader.py  st_form.py  st_latex.py  st_line_chart.py  st_multiselect.py  st_progress.py  st_secrets.py  st_selectbox.py  st_session_state.py  st_slider.py  st_write.py  text_elements.py
