[tool.poetry]
name = "streamlit-30days-challenge"
version = "1.0.0"
description = "Streamlit learning"
authors = ["Sharizan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
streamlit = "^1.28.2"
cognite-sdk = "^7.3.0"
plotly = "^5.18.0"
millify = "^0.1.1"
vega-datasets = "^0.9.0"
streamlit-pandas-profiling = "^0.1.3"

[tool.poetry.scripts]
dev = "streamlit run files/streamlit_app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
